# libglstring

./: CMakeLists.txt  README.md
draw_strings/: draw_strings.c  string_draw_standart_function.c
includes/: lgs.h  libglstring.h  libglstring_structs.h  structs.h
init/: standart_shaders.c  string_init.c
other/: other.c
src/shaders/: static_string.frag  static_string.vert
string_create/: create_symbols_list.c  string_create.c  string_create_image.c  string_create_nospace.c  string_create_vao.c  vao_module.c
string_create_image/: create_symbols_list.c  create_symbols_list_nospace.c  string_create_image.c  string_create_image_nospace.c
string_update_info/: string_update.c  string_update_index.c  string_update_index_nospace.c  string_update_matrix_model.c  string_update_nospace.c  string_update_vbo.c  string_update_vbo_all.c  string_update_vbo_index.c
t_string/: string_add.c  string_delete_one.c  string_get_elem.c
t_symbol/: symbol_addend.c  symbol_free_lst.c  symbol_new.c
